<resources>
    <string name="app_name">Yummie Plate</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Packed Items</string>
    <string name="menu_myOrders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="passwordreset">Password Reset</string>
    <string name="deleteaccount">Delete Account</string>
    <string name="logout">Logout</string>

    <string name="flat_house_no_building_apartment">Flat, House no., Building, Apartment</string>
    <string name="area_colony_street_no_sector">Area, Colony, Street no., Sector</string>
    <string name="landmark_e_g_near_apollo_hospital">Landmark e.g. near Apollo Hospital</string>
    <string name="town_city_with_state">Town/City with State</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="title_activity_main2">Menu</string>
    <string name="title_home">Cakes &amp; Bakery</string>
    <string name="title_dashboard">Party Order</string>
    <string name="title_notifications">Sweets &amp; Deserts </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flower_for_gifting">Flower For Gifting</string>
    <string name="title_activity_live_tracking_featue">Map</string>

</resources>