<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cake">

    <fragment
        android:id="@+id/navigation_cake"
        android:name="com.example.yummieplate.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pizza"
        android:name="com.example.yummieplate.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_sweets"
        android:name="com.example.yummieplate.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_flowers_for_gifting"
        android:name="com.example.yummieplate.PlantForGiftingFragment"
        android:label="Plant For Gifting"
        tools:layout="@layout/fragment_plant_for_gifting" />

    <fragment
        android:id="@+id/navigation_flowers_n_boquet"
        android:name="com.example.yummieplate.FlowerNBoquetFragment"
        android:label="Flower &amp; Boquet"
        tools:layout="@layout/fragment_flower_n_boquet" />

</navigation>